[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphcast-interpretability"
version = "0.1.0"
description = "Interpretability tools for GraphCast"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "xarray",
    "jax"
]

[tool.setuptools.packages.find]
where = ["src"]